--- a/palavCultoFev.html
+++ b/palavCultoFev.html
@@ -56,8 +56,7 @@
             <label for="">Série: <i style='color:rgb(255, 138, 5)'>Batalha Espiritual</i></label>
             <br>
             <button>
-                <a href="audio/cultoDomingo/Você esta numa Guerra - Pr. Sérgio Carvalho - 23 fevereiro 2020.mp3"
-                    download>
+                <a href="audio/cultoDomingo/Você esta numa Guerra - Pr. Sérgio Carvalho - 23 fevereiro 2020.mp3" style='color:rgb(255, 138, 5)' download>
                     Download
                 </a>
             </button>
@@ -78,7 +77,7 @@
             <label for="">Série: <i style='color:rgb(255, 138, 5)'>Batalha Espiritual</i></label>
             <br>
             <button>
-                <a href="audio/cultoDomingo/A batalha da mente - Pr Raphael Vieira - 16 fevereiro 2020.mp3" download>
+                <a href="audio/cultoDomingo/A batalha da mente - Pr Raphael Vieira - 16 fevereiro 2020.mp3" style='color:rgb(255, 138, 5)' download>
                     Download
                 </a>
             </button>
@@ -99,8 +98,7 @@
             <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
             <br>
             <button>
-                <a href="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3"
-                    download>
+                <a href="audio/cultoDomingo/A base da Obra Consumada - Pr. Adalberto Garcia - 09 fevereiro 2020.mp3" style='color:aqua' download>
                     Download
                 </a>
             </button>
@@ -121,9 +119,7 @@
             <label for="">Série: <i style='color:aqua'>Tipos de Oração</i></label>
             <br>
             <button>
-                <a href="audio/cultoDomingo/Princípios da Oração Respondida - Pr. Raphael Vieira - 02 fev 2020.mp3"
-                    download>
-                    Download
+                <a href="audio/cultoDomingo/Princípios da Oração Respondida - Pr. Raphael Vieira - 02 fev 2020.mp3"style='color:aqua' Download
                 </a>
             </button>
             <br>
