--- a/palavRadicais.html
+++ b/palavRadicais.html
@@ -148,6 +148,24 @@
             <br>
             <br>
         </div>
+        <div class="palavrasAudio">
+            <br>
+            <audio controls>
+                <source src="audio/radicaisLivres/Armagedon - 11 jan - Obr. Bruno Bernardelli.mp3" type="audio/mpeg">
+            </audio>
+            <br>
+            <label for="">Armagedon - Obr. Bruno Bernardelli</label>
+            <br>
+            <label for="">11 de janeiro de 2020</label>
+            <br>
+            <button>
+            <a href="audio/radicaisLivres/Armagedon - 11 jan - Obr. Bruno Bernardelli.mp3" download>
+               Download
+               </a>
+            </button>
+            <br>
+            <br>
+        </div>
     </section>
 
 
